# LinaVG

./: .clang-format  CMakeLists.txt  LICENSE  LinaVG.sln.licenseheader  README.md
.github/: FUNDING.yml
Dependencies/: Dependencies.cmake
Dependencies/FreeType-2.12.1/: CMakeLists.txt
Example/: CMakeLists.txt
Example/Dependencies/: Dependencies.cmake
Example/Dependencies/glad/: CMakeLists.txt
Example/Dependencies/glad/include/glad/: glad.h
Example/Dependencies/glad/src/: glad.c
Example/Dependencies/glfw/: CMakeLists.txt
Example/Dependencies/glfw/src/: CMakeLists.txt
Example/include/: DemoScreens.hpp  Main.hpp
Example/include/Backends/: GLFWWindow.hpp
Example/include/Backends/GL/: GLBackend.hpp
Example/include/Utility/: stb_image.h
Example/src/: DemoScreens.cpp  Main.cpp
Example/src/Backends/: GLFWWindow.cpp
Example/src/Backends/GL/: GLBackend.cpp
Examples/: CMakeLists.txt
Examples/include/: DemoScreens.hpp  Main.hpp
Examples/include/Backends/: OpenGLGLFW.hpp
Examples/include/Backends/GL/: GLBackend.hpp
Examples/src/: DemoScreens.cpp  Main.cpp
Examples/src/Backends/: OpenGLGLFW.cpp
LinaVG/: CMakeLists.txt
LinaVG/include/: LinaVG.hpp
LinaVG/include/Backends/: GLBackend.hpp
LinaVG/include/Backends/GL/: glad.h
LinaVG/include/Core/: Backend.hpp  Common.hpp  Drawer.hpp  Math.hpp  Renderer.hpp  Text.hpp
LinaVG/include/Utility/: Utility.hpp
LinaVG/src/Backends/: GLBackend.cpp
LinaVG/src/Backends/GL/: GLBackend.cpp  glad.c
LinaVG/src/Core/: Backend.cpp  Common.cpp  Drawer.cpp  Math.cpp  Renderer.cpp  Text.cpp
LinaVG/src/Utility/: Utility.cpp
_Resources/Resources/Fonts/: README.txt
include/Backends/: BaseBackend.hpp
include/Backends/GL/: GLBackend.hpp
include/Core/: Backend.hpp  Common.hpp  Drawer.hpp  LinaGUI.hpp  LinaGUIDrawer.hpp  LinaGUIGLBackend.hpp  Renderer.hpp  Text.hpp
include/Lina2D/: Lina2D.hpp
include/Lina2D/Backends/: GLBackend.hpp
include/Lina2D/Core/: Backend.hpp  Common.hpp  Drawer.hpp  GLBackend.hpp  Internal.hpp  Math.hpp  Renderer.hpp
include/LinaVG/: LinaVG.hpp
include/LinaVG/Core/: BaseBackend.hpp  BufferStore.hpp  Common.hpp  Drawer.hpp  Math.hpp  Renderer.hpp  Text.hpp  Vectors.hpp
include/LinaVG/Utility/: Utility.hpp
include/Utility/: Utility.hpp
src/: LinaGUI.cpp
src/Backends/GL/: GLBackend.cpp
src/Core/: Backend.cpp  BufferStore.cpp  Common.cpp  Drawer.cpp  LinaGUI.cpp  LinaGUIDrawer.cpp  LinaGUIGLBackend.cpp  Math.cpp  Renderer.cpp  Text.cpp
src/Lina2D/Backends/: GLBackend.cpp
src/Lina2D/Core/: Backend.cpp  Common.cpp  Drawer.cpp  GLBackend.cpp  Internal.cpp  Math.cpp  Renderer.cpp
src/Utility/: Utility.cpp
